# call-option-rewards

./: .gitignore  README.md
.circleci/: config.yml
anchor-bpf/: Anchor.toml  README.md  package-lock.json  package.json
anchor-bpf/programs/merkle-call-options/: Cargo.toml
anchor-bpf/programs/merkle-call-options/src/: lib.rs  merkle_proof.rs
anchor-bpf/tests/: merkle-call-options.js
anchor-bpf/tests/data/: DrWW4z9awhp6gg1gk3jPHqG68toDwxWjhiUmiZZ62gMh.json  claims-1arDyjoydH-rcbAUw-B3se5x+fKSjtRVQFadh1ymjSc=.json  claims-NWUyMTlmY2E2MmQ2ZTg1ZTYyN2E5ZjhjNTRmZmI5NWQ0NDI3ZTI4ODQzYmFhYmE1MmMxMTJjZWFlMDg3MmVlYw==.json  claims-YBKqO7sk+KJJC1CirbhD0czdpeDTa8aqx7BD9HtIEC4=.json  claims-q8LYvfEDW9gdyeWBZk3ABsUjVQFM-V4BhAsSHJMDstA=.json  sample-claims.json  zz5YUJpat7fSwKsBVVBjv2FfxkGu7DmdW4MBdN6HZD2.json
rewarder/: README.md  asycIter.ts  classes.ts  mod.ts  payerParsing.ts  stepSwap.ts  txHistory.ts
rewarder/analysis/input/: all-payers-1633046400.json  all-payers-1633132800.json  all-payers-1633219200.json  all-payers-1633305600.json  all-payers-1633392000.json  all-payers-1633478400.json  all-payers-1633564800.json  all-payers-1633651200.json  all-payers-1633737600.json  all-payers-1633824000.json  all-payers-1633910400.json  all-payers-1633996800.json  all-payers-1634083200.json  all-payers-1634169600.json  all-payers-1634256000.json  (+112 more)
rewarder/anchor-dev/: anchor-dev.js
rewarder/anchor-esm-fix/: anchor-dev.js  web3-dev.js
rewarder/anchor-wrapper/: index.ts
rewarder/arweave/: index.ts
rewarder/utils/: balance-tree.ts  merkle-tree.ts  parse-balance-map.ts
(+3 files in other folders)
