[package]
name = "merkle-call-options"
version = "0.1.0"
description = "A Solana program for distributing call options according to a Merkle root."
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "merkle_call_options"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.17.0"
anchor-spl = "0.17.0"
solana-program = "1.7.11"
spl-associated-token-account = { version = "1.0.3", features = [
    "no-entrypoint"
] }