[package]
name = "merkle-call-options"
version = "0.1.0"
description = "A Solana program for distributing call options according to a Merkle root."
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "merkle_call_options"

[features]
no-entrypoint = []
no-idl = []
verbose = []
cpi = ["no-entrypoint"]
default = []
local-testing = []
test-id = []

[dependencies]
anchor-lang = "0.18.2"
anchor-spl = "0.18.2"
solana-program = "1.8.10"
spl-associated-token-account = { version = "1.0.3", features = [
    "no-entrypoint"
] }
bit = "0.1.1"
hex = "0.4.3"